Fix thread num and start script